# vpn-base-model

./: README.md  aarch.txt
openvpn-runner-ported/: CMakeLists.txt  Makefile
openvpn-runner-ported/runners-conf/: runner-1.ovpn
openvpn-runner-ported/src/: main.cpp  openvpn-attachements.hpp  openvpn-test-client.hpp
parser-/: Makefile  main.cpp  openvpn_parser  runner-0.ovpn
